added an image of the tamale in index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipies</h1>
     <a href="recipies/ tamales_Hondureños.html">Tamales Hondureños</a>
+    <img src="images/h_tamale.jpeg" alt="" srcset="">
 </body>
 </html>
