removed tamale image from index.html,added Tamale image to tamales_Honurenos.html as well as a description and ingredients

--- a/recipies/ tamales_Hondureños.html
+++ b/recipies/ tamales_Hondureños.html
@@ -7,5 +7,31 @@
 </head>
 <body>
     <h1>Tamales Hondureños</h1>
+    <img src="../images/h_tamale.jpeg" alt="" srcset="">
+    <h2>The tamal is an ancient food and ritual that has persisted over time in South and Central America, despite the impact of various culinary influences and invasions.</h2>
+    <h1>Ingredients</h1>
+    <ul>
+<li>4 pounds of corn</li>
+<li>hens </li> 
+<li>2 pounds potatoes</li> 
+<li>2 pounds green beans</li> 
+<li>2 pounds Loroco (aromatic flower in bud)</li> 
+<li>2 pounds tomatoes</li> 
+<li>3 onions large</li> 
+<li>5 green chilies</li> 
+<li>Herbs (mint, parsley, celery, etc)</li> 
+<li>2 bags of relaxation (mix of species)
+<li>Oil 2 bottles (like some of the lard, can be 2 pounds)</li> 
+<li>8 oz chicken broth</li> 
+<li>2 bulbs of garlic</li> 
+<li>Achiote to taste</li> 
+<li>Salt to taste</li> 
+<li>Hard eggs (optional)</li> 
+<li>Butter Cheese  (optional)</li> 
+<li>2 dozen young leaves of bananas without cuts</li>
+ </ul>
+ <p><strong><em>This recipe will be enough to make around 85 tamales</em></strong></p>
+
+
 </body>
 </html>
