--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Odin Recipies</h1>
     <a href="recipies/ tamales_Hondureños.html">Tamales Hondureños</a>
-    <a href="recipies/Honduran_Crispy_Tacos.html">Honduran_Crispy_Tacos</a>
+    <a href="recipies/Honduran_Crispy_Tacos.html">Honduran Crispy Tacos</a>
 </body>
 </html>
