--- a/recipies/ tamales_Hondureños.html
+++ b/recipies/ tamales_Hondureños.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Tamales Hondureños</h1>
-    <img src="../images/h_tamale.jpeg" alt="" srcset="">
+    <img src="../images/h_tamale.jpeg" alt="" srcset=""
+    width="400"
+    height="300">
     <h2>The tamal is an ancient food and ritual that has persisted over time in South and Central America, despite the impact of various culinary influences and invasions.</h2>
     <h1>Ingredients</h1>
     <ul>
@@ -58,9 +60,7 @@
 <p>A portion of banana leaf 30 x 40 cms (approx) is taken, and the center 1/2 cup dough is placed, a large hole opens in the center and is put 1 tablespoon of salsa, a good piece Meat, 3 pieces of potato, a gajita of lorocos (xóticos provide a taste and smell), some chopped green beans.
 Is that this filling is the center, is wrapped and secured. If desired you can put 2 cm or 1/4 cheese egg (optional).
 When finished wrapping the tamales are Boil about 1 hour, in a large, covered with water recently. They are quick cooking since most ingredients are cooked.
-YES, IS QUITE WORK, BUT THE RESULT IS WORTH! Tamales SALVADORIANS STEP UP YOUR DELICIOUS TASTE OR WHEN SERVED TO COOL.</p>
-    
-    
+YES, IS QUITE WORK, BUT THE RESULT IS WORTH! Tamales SALVADORIANS STEP UP YOUR DELICIOUS TASTE OR WHEN SERVED TO COOL.</p>    
 </ol>
 
 </body>
