--- a/recipies/Honduran_Crispy_Tacos.html
+++ b/recipies/Honduran_Crispy_Tacos.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Honduran-Style Crispy Fried Tacos</h1>
-    <img src="../images/h_taco.jpg" alt="" srcset="">
+    <img src="../images/h_taco.jpg" alt="" srcset=""
+    width="400"
+    height="300">
     <h2>When it comes to making deep-fried appetizers, tacos hondureños are one of my favorites to make! crispy tacos. Serve topped with white cheese, onion sauce, or chopped cabbage.</h2>
     <h1>Ingredients</h1>
     <ul>
