--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipies</title>
 </head>
 <body>
     <h1>Odin Recipies</h1>
     <ul>
-    <li><a href="recipies/ tamales_Hondureños.html">Tamales Hondureños</a></li>
-    <li><a href="recipies/Honduran_Crispy_Tacos.html">Honduran Crispy Tacos</a></li>
+    <li><a href="recipies/ tamales_Hondureños.html"target="_blank" rel="noopener noreferer">Tamales Hondureños</a></li>
+    <li><a href="recipies/Honduran_Crispy_Tacos.html"target="_blank" rel="noopener noreferer">Honduran Crispy Tacos</a></li>
+    <li><a href="recipies/Honduran_Quesadillas.html"target="_blank" rel="noopener noreferer">Honduran Quesadillas</a></li>
 </ul>
 </body>
 </html>
