added some pizzaz to indx.html, plan to add more soon to the other pages

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipies</title>
 </head>
-<body>
-    <h1>Odin Recipies</h1>
+<body class="wallpaper">
+    <h1 class="odinHeader">Odin Recipes</h1>
     <ul>
     <li><a href="recipies/ tamales_Hondureños.html"target="_blank" rel="noopener noreferer">Tamales Hondureños</a></li>
-    <li><a href="recipies/Honduran_Crispy_Tacos.html"target="_blank" rel="noopener noreferer">Honduran Crispy Tacos</a></li>
+    <li><a href="recipies/Honduran_Crispy_Tacos.html"target="_blank" rel="noopener noreferer">Tacos Hondureños</a></li>
     <li><a href="recipies/Honduran_Quesadillas.html"target="_blank" rel="noopener noreferer">Honduran Quesadillas</a></li>
 </ul>
+<img src="images/shrimp.png" alt="Shrimp frying rice" srcset="">
 </body>
 </html>
